--- a/app/src/main/res/layout/activity_phone_dialer.xml
+++ b/app/src/main/res/layout/activity_phone_dialer.xml
@@ -11,8 +11,158 @@
     android:orientation="vertical"
     tools:context="com.example.student.lab03.phonedialer.PhoneDialerActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/phone_number_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="phone"
+        android:enabled="false"
+        android:gravity="center"/>
+
+    <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_gravity="center"
+        android:rowCount="6"
+        android:columnCount="3">
+
+        <ImageButton
+            android:id="@+id/backspace_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/backspace"
+            android:layout_gravity="center"
+            android:background="@null"
+            android:layout_row="0"
+            android:layout_column="2"/>
+
+        <Button
+            android:id="@+id/number_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:text="@string/number_1"/>
+
+        <Button
+            android:id="@+id/number_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:text="@string/number_2"/>
+
+        <Button
+            android:id="@+id/number_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:text="@string/number_3"/>
+
+        <Button
+            android:id="@+id/number_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:text="@string/number_4"/>
+
+        <Button
+            android:id="@+id/number_5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:text="@string/number_5"/>
+
+        <Button
+            android:id="@+id/number_6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="2"
+            android:layout_column="2"
+            android:text="@string/number_6"/>
+
+        <Button
+            android:id="@+id/number_7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:text="@string/number_7"/>
+
+        <Button
+            android:id="@+id/number_8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:text="@string/number_8"/>
+
+        <Button
+            android:id="@+id/number_9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:text="@string/number_9"/>
+
+        <Button
+            android:id="@+id/star"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:text="@string/star"/>
+
+        <Button
+            android:id="@+id/number_0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:text="@string/number_0"/>
+
+        <Button
+            android:id="@+id/hashtag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_row="4"
+            android:layout_column="2"
+            android:text="@string/hashtag"/>
+
+        <ImageButton
+            android:id="@+id/call_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/call"
+            android:layout_gravity="center"
+            android:background="@null"
+            android:layout_row="5"
+            android:layout_column="0"/>
+
+        <ImageButton
+            android:id="@+id/reject_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/hangup"
+            android:layout_gravity="center"
+            android:background="@null"
+            android:layout_row="5"
+            android:layout_column="2"/>
+
+    </GridLayout>>
 </LinearLayout>
