--- a/app/src/main/res/layout/activity_phone_dialer.xml
+++ b/app/src/main/res/layout/activity_phone_dialer.xml
@@ -155,7 +155,7 @@
             android:layout_column="0"/>
 
         <ImageButton
-            android:id="@+id/reject_button"
+            android:id="@+id/hangup_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/hangup"
